refine web app multi-process

--- a/notebook/test-db-postgres.ipynb
+++ b/notebook/test-db-postgres.ipynb
@@ -3,44 +3,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a03da0d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(0, '../src/')"
+    "! /opt/conda/bin/pip install psycopg2-binary sqlalchemy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12967663",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "sys.path.insert(0, '../src/')\n",
+    "os.environ['DIR_RESOURCE'] = '../demo/resource'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aloha.service.api.v0 import APICaller\n",
+    "import aloha\n",
+    "from aloha.settings import SETTINGS as S\n",
+    "from aloha.db.postgres import PostgresOperator\n",
     "\n",
-    "caller = APICaller(url_endpoint='http://localhost:9999')"
+    "print(aloha.__path__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d390a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "caller.call('/api/common/sys_info/gpu')"
+    "op_pg = PostgresOperator(S.config.deploy.postgres_db0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "351a9e14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "caller.call('/api/common/sys_info', kind='cuda')"
+    "op_pg.engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = op_pg.execute_query(sql=\"SELECT pg_sleep(2*5) AS slept\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(cur)"
    ]
   }
  ],
@@ -64,5 +92,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 1
 }
